--- a/src/app/(user)/feed/page.module.css
+++ b/src/app/(user)/feed/page.module.css
@@ -268,6 +268,7 @@
     line-height: 1.6;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     opacity: 0.9;
